--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Help you to copy code with markdown fences and filename",
 	"version": "0.0.1",
 	"publisher": "pluveto",
-	"icon": "https://github.com/pluveto/copy-code-as-markdown/blob/4afee7ec353fe571c2168155f4a695775e850c9a/icon.png?raw=true",
+	"repository": {"type":"Github", "url": "https://github.com/pluveto/copy-code-as-markdown"},
+	"icon": "icon.png",
 	"engines": {
 		"vscode": "^1.59.0"
 	},
