--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "copy-code-as-markdown",
+	"name": "copy-code-as-markdown",
 	"displayName": "Copy Code as Markdown",
-	"description": "Help you to copy code with markdown fences and filename",
+	"description": "Help you to copy code with markdown fences and fileName",
 	"version": "0.0.3",
 	"publisher": "pluveto",
-	"repository": {"type":"Github", "url": "https://github.com/pluveto/copy-code-as-markdown"},
+	"repository": {
+		"type": "Github",
+		"url": "https://github.com/pluveto/copy-code-as-markdown"
+	},
 	"icon": "icon.png",
 	"engines": {
 		"vscode": "^1.59.0"
@@ -13,32 +16,52 @@
 		"Other"
 	],
 	"activationEvents": [
-        "onCommand:copy-code-as-markdown.CopySelectionAsMarkdown"
+		"onCommand:copy-code-as-markdown.CopySelectionAsMarkdown"
 	],
 	"main": "./extension.js",
 	"contributes": {
-		"configuration":{
+		"configuration": {
 			"title": "Copy Code As Markdown",
 			"properties": {
-				"copyCodeAsMarkdown.template":{
+				"copyCodeAsMarkdown.defaultTemplate": {
 					"type": "string",
-					"default": "*{filename}* {lineNumber}:\n```{lang}\n{text}\n```",
+					"default": "*{fileName}* {lineNumber}:\n```{lang}\n{text}\n```",
 					"enum": [
 						"```{lang}\n{text}\n```",
-						"*{filename}* {lineNumber}:\n```{lang}\n{text}\n```"
+						"*{fileName}* {lineNumber}:\n```{lang}\n{text}\n```"
 					],
 					"markdownEnumDescriptions": [
 						"only the markdown block",
-						"Filename, Line and markdown block"
+						"fileName, Line and markdown block"
 					],
-					"markdownDescription": "Available vars:\n\n+ `{filename}`\n+ `{lineNumber}`\n+ `{lang}`\n+ `{text}`"
+					"markdownDescription": "Available vars:\n\n+ `{fileName}`\n+ `{lineNumber}`\n+ `{lang}`\n+ `{text}`"
+				},
+				"copyCodeAsMarkdown.usingTemplateName": {
+					"type": "string",
+					"default": "default"
+				},
+				"copyCodeAsMarkdown.templates": {
+					"type": "object",
+					"default": {
+						"default": "*{filename}* {lineNumber}:\n```{lang}\n{text}\n```",
+						"lineRange": "*{filename}* {lineNumber} - {lineNumberEnd}:\n```{lang}\n{text}\n```",
+						"onlyCode": "```{lang}\n{text}\n```",
+						"onlyPosition": "{filename}:{lineNumber}:{colNumber}"
+					},
+					"markdownDescription": "Create your own template. Key is the template name, value is the template. Available vars:\n\n+ `{fileName}`\n+ `{lineNumber}`\n+ `{lineNumberEnd}`\n+ `{lang}`\n+ `{text}`"
 				}
 			}
 		},
-		"commands": [{
-            "command": "copy-code-as-markdown.CopySelectionAsMarkdown",
-            "title": "Copy selection code as Markdown"
-		}]
+		"commands": [
+			{
+				"command": "copy-code-as-markdown.CopySelectionAsMarkdown",
+				"title": "copyCodeAsMarkdown: Copy selection code as Markdown"
+			},
+			{
+				"command": "copy-code-as-markdown.SwitchUsingTemplate",
+				"title": "copyCodeAsMarkdown: Switch using template"
+			}
+		]
 	},
 	"scripts": {
 		"lint": "eslint .",
@@ -46,15 +69,14 @@
 		"test": "node ./test/runTest.js"
 	},
 	"devDependencies": {
-        "@types/vscode": "^1.59.0",
-        "@types/glob": "^7.1.3",
-        "@types/mocha": "^8.2.2",
-        "@types/node": "14.x",
-        "eslint": "^7.27.0",
-        "glob": "^7.1.7",
-        "mocha": "^8.4.0",
-        "typescript": "^4.3.2",
-        "vscode-test": "^1.5.2"
-    }
-
+		"@types/vscode": "^1.59.0",
+		"@types/glob": "^7.1.3",
+		"@types/mocha": "^8.2.2",
+		"@types/node": "14.x",
+		"eslint": "^7.27.0",
+		"glob": "^7.1.7",
+		"mocha": "^8.4.0",
+		"typescript": "^4.3.2",
+		"vscode-test": "^1.5.2"
+	}
 }
