--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 						"only the markdown block",
 						"fileName, Line and markdown block"
 					],
-					"markdownDescription": "Available vars:\n\n+ `{fileName}`\n+ `{lineNumber}`\n+ `{lang}`\n+ `{text}`"
+					"markdownDescription": "Available vars:\n\n+ `{fileName}`\n+ `{lineNumber}`\n+ `{lang}`\n+ `{text}\n+ `{outlinePath}`"
 				},
 				"copyCodeAsMarkdown.usingTemplateName": {
 					"type": "string",
@@ -47,9 +47,14 @@
 						"default": "*{filename}* {lineNumber}:\n```{lang}\n{text}\n```",
 						"lineRange": "*{filename}* {lineNumber} - {lineNumberEnd}:\n```{lang}\n{text}\n```",
 						"onlyCode": "```{lang}\n{text}\n```",
-						"onlyPosition": "{filename}:{lineNumber}:{colNumber}"
+						"onlyPosition": "{filename}:{lineNumber}:{colNumber}",
+						"withOutline": "[{filename}#L{lineNumber}](/{filename}#L{lineNumber})\n>{outlinePath}\n```{lang}\n{text}\n```"
 					},
-					"markdownDescription": "Create your own template. Key is the template name, value is the template. Available vars:\n\n+ `{fileName}`\n+ `{lineNumber}`\n+ `{lineNumberEnd}`\n+ `{lang}`\n+ `{text}`"
+					"markdownDescription": "Create your own template. Key is the template name, value is the template. Available vars:\n\n+ `{fileName}`\n+ `{lineNumber}`\n+ `{lineNumberEnd}`\n+ `{lang}`\n+ `{text}\n+ `{outlinePath}`"
+				},
+				"copyCodeAsMarkdown.delimiter": {
+					"type": "string",
+					"default": " &raquo; "
 				}
 			}
 		},
@@ -70,10 +75,10 @@
 		"test": "node ./test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.59.0",
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.2.2",
 		"@types/node": "14.x",
+		"@types/vscode": "^1.59.0",
 		"eslint": "^7.27.0",
 		"glob": "^7.1.7",
 		"mocha": "^8.4.0",
